# Design-Optimization

./: .gitignore  README.md  pyproject.toml
main/: simulate_observation.py
outputs/runs/: 20240124173111.json  earth.json  earth_2035_2045.json  earth_mars_mars_2035_2045.json  inter_planets_determined.json  mars_earth_2035_2045.json  mars_mars_2035_2045.json  obs.json
src/: calc_elipse_time.py  calc_launch_window.py  calc_path_time.py  calc_spiral.py  distance.py  main.ipynb  mult_optimization.py  mult_optimization_2sats.py  mult_optimization_2sats_copy.py  mult_optimization_3sats.py  optimize_observation.py  optimize_params_unrelated_to_science.py  optimize_trajectory_be_continuous_control.py  optimize_trajectory_continuous_with_variable_vinf.py  optimize_trajectory_with_swingby.py  plot_json.py  plot_payload_capability.py  plot_spiral.py  simulate_observation.py  simulate_observation_2sats_detalied.py  test_insertion.py  trajectory_by_continuous_control.py  trajectory_spiral.py  trajectory_with_swingby.py  trans_trajectory.py
src/libs/: interplanetary_lib.py  lib.py  occultation_lib.py  payload_capability.py
src/outputs/runs/: 20240124111314.json
