[project]
name = "design-optimization"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "lilkoke", email = "k-hirano@wb3.so-net.ne.jp" }
]
dependencies = [
    "scipy>=1.10.1",
    "numpy>=1.24.4",
    "matplotlib>=3.7.4",
    "pymoo>=0.6.1.1",
    "deap>=1.4.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
